aligned footer correctly, need to fix footer body alignment

--- a/css/sideColumn.css
+++ b/css/sideColumn.css
@@ -26,9 +26,10 @@
 }
 
 /* Clear floats after the columns */
-.row:after {
+.row::after {
   content: "";
   display: table;
+
   clear: both;
 }
 
